# Caelum_Lite

./: .gitignore  CMakeLists.txt  PROJECT_CREATION.md  README.md  caelum-weather-station.js  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  version.h.in
PCB/caelum/: caelum.kicad_pcb  caelum.kicad_prl  caelum.kicad_pro  caelum.kicad_sch
PCB/caelum_v2/: caelum_v2.kicad_pcb  caelum_v2.kicad_sch  ~caelum_v2.kicad_sch.lck
main/: CMakeLists.txt  aht20.c  aht20.h  bme280_app.c  bme280_app.h  bmp280.c  bmp280.h  esp_zb_ota.c  esp_zb_weather.c  esp_zb_weather.h  persistent_log.c  persistent_log.h  sensor_if.c  sensor_if.h  sleep_manager.c  sleep_manager.h  weather_driver.c
